--- a/App_Music/Base.lproj/Main.storyboard
+++ b/App_Music/Base.lproj/Main.storyboard
@@ -44,6 +44,9 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="19" weight="heavy"/>
                                     <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="tapNextButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="clq-to-Ln1"/>
+                                </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="wBf-9a-UJR">
                                 <rect key="frame" x="61" y="494" width="271" height="31"/>
@@ -56,6 +59,9 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="35"/>
                                     <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="tapPlayButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="XdP-aQ-TkP"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y5u-Vd-qID">
                                 <rect key="frame" x="63" y="579" width="57" height="37"/>
@@ -64,6 +70,9 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="19" weight="heavy"/>
                                     <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="tapPreviousButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="pDN-15-r9a"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -92,6 +101,15 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="old-Z2-5mD" secondAttribute="bottom" constant="361" id="wRc-d8-gaR"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="next_button" destination="rFv-Ov-Cs0" id="aMd-xg-g8K"/>
+                        <outlet property="play_button" destination="Jzi-Wk-FrV" id="9f8-Qx-pXn"/>
+                        <outlet property="play_time" destination="wBf-9a-UJR" id="lPs-3O-jKh"/>
+                        <outlet property="previous_button" destination="y5u-Vd-qID" id="6Jx-i6-Mq7"/>
+                        <outlet property="song_artist" destination="old-Z2-5mD" id="mMM-67-o8e"/>
+                        <outlet property="song_image" destination="XmI-C2-a7d" id="CiV-cm-Hx3"/>
+                        <outlet property="song_name" destination="Sld-Gh-TVo" id="cd4-EF-ceN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
